[package]
name = "peercoin-rpc"
version = "0.17.1"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
]
license = "CC0-1.0"
homepage = "https://github.com/backpacker69/rust-peercoin-rpc/"
repository = "https://github.com/backpacker69/rust-peercoin-rpc/"
description = "RPC client library for the Peercoin JSON-RPC API."
keywords = ["crypto", "peercoin", "rpc"]
readme = "README.md"
edition = "2018"

[lib]
name = "peercoin_rpc"
path = "src/lib.rs"

[dependencies]
peercoin-rpc-json = { version = "0.17.1", path = "../json" }

log = "0.4.5"
jsonrpc = "0.14.0"

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"
bitcoin-private = "0.1.0"
